--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -6,7 +6,7 @@
         <link rel='icon' href="../img/weather.png">
     </head>
     <body>
-        <h1>Weather Application</h1>     
+        <marquee><h1>Weather Application</h1></marquee>     
         {{>header}}
         <br>
         <form>
