about data is modefied

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -5,7 +5,7 @@ img {
     width: 150px;
 }
 body{
-    background-color: brown; 
+    background-color: gray; 
     font-family: fantasy;
     font-size: x-large; 
     max-width: 600px;
