about data is modefied

--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -7,12 +7,11 @@
         <link rel='icon' href="../img/weather.png">
     </head> 
     <body>
-        <h1>About Me</h1><br>
+        <h3>About Me</h3>
         <p>The page is created by prakash. It uses the data from the mapbox.com and darksky.net</p><br>
         <img src="./img/prakash.jpeg">
          {{>header}}
-         <br><br>
+         <br>
         {{>footer}}
-
     </body>
 </html> 
