--- a/template/views/help.hbs
+++ b/template/views/help.hbs
@@ -8,11 +8,10 @@
 
     </head>
     <body>
-        <h1>Help Me</h1>
+        <h1>Help</h1>
         <img src="./img/prakash.jpeg">
          {{>header}}
-         <br><br>
+         <br>
         {{>footer}}
-
     </body> 
 </html>
