--- a/template/views/index.hbs
+++ b/template/views/index.hbs
@@ -6,9 +6,8 @@
         <link rel='icon' href="../img/weather.png">
     </head>
     <body>
-        <marquee><h1>Weather Application</h1></marquee>     
+        <h1>Weather Application</h1>     
         {{>header}}
-        <br>
         <form>
         <input placeholder="Location">
         <button>Find</button>
