--- a/public/css/style.css
+++ b/public/css/style.css
@@ -32,13 +32,13 @@ header a{
     text-decoration: none;
 }
 input{
-    padding: 8px;
+    padding: 10px;
     border: 1px solid brown;
 }
 button{
     cursor: pointer;
-    padding: 8px;
-    border: 1px solid brown;
+    padding: 10px;
+    border: 1px solid rgb(106, 172, 168);
     color: aliceblue;
     background-color: brown;
 
