--- a/template/views/about.hbs
+++ b/template/views/about.hbs
@@ -8,9 +8,15 @@
     </head> 
     <body>
         <h3>About Me</h3>
-        <p>The page is created by prakash. It uses the data from the mapbox.com and darksky.net</p><br>
         <img src="./img/prakash.jpeg">
          {{>header}}
+         <ul style="font-family: 'Times New Roman', Times, serif;">
+             <li>It uses the mapbox.com for geocode.</li>
+             <li>It uses the darksky.net for forecast.</li>
+             <li>It uses the Git for version control.</li>
+             <li>It uses the Github and Heroku for deployment.</li>
+             <li>The page is made up of 'HTML, CSS, JS, Node, Express' components</li> 
+         </ul>
          <br>
         {{>footer}}
     </body>
