--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,28 +1,29 @@
 h1{
-    color:paleturquoise;
+    color:black;
+    font-family: 'Times New Roman', Times, serif;
 }
 img {
     width: 150px;
 }
 body{
-    background-color: rgb(78, 184, 149); 
-    font-family: fantasy;
+    background-color:wheat; 
+    font-family: 'Times New Roman', Times, serif;
     font-size: x-large; 
     max-width: 600px;
-    margin:0 auto; 
+    margin-left: 150px;
+    margin-right: 150px; 
     padding: 0 20px;
      
 }
 
 footer{
     color: gray;
-    font-family: Arial, Helvetica, sans-serif;
-    
+    font-family: 'Times New Roman', Times, serif;   
     
 }
 header{
-    color: gray;
-    font-family: cursive;
+    color: black;
+    font-family: 'Times New Roman', Times, serif;
     
     
 }
@@ -30,6 +31,7 @@ header a{
     color: black;
     margin-right: 18px;
     text-decoration: none;
+    font-family: 'Times New Roman', Times, serif;
 }
 input{
     padding: 10px;
@@ -40,7 +42,9 @@ button{
     padding: 10px;
     border: 1px solid rgb(106, 172, 168);
     color: aliceblue;
-    background-color: brown;
-
-
+    background-color: rgb(134, 98, 98);
+}
+p{
+    font-family: 'Times New Roman', Times, serif;
+    font-size: medium;
 }
